// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-text Should render with args {
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message',
  tooltipPosition: 'input'
}: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="Tooltip message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message',
  tooltipPosition: 'input',
  value: 'batman'
}: 1`] = `
<mg-input-text value="batman">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="Tooltip message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <b class="mg-c-input__readonly-value">
        batman
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  required: true,
  disabled: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-help-text" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" disabled="" id="identifier" maxlength="400" name="identifier" required="" type="text" value="blu">
        <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  required: true,
  readonly: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <b class="mg-c-input__readonly-value">
        blu
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="true" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'input',
  labelOnTop: true
}: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { characterLeftHide: true }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 0;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { datalistoptions: [Array] }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" autocomplete="off" class="mg-c-input__box mg-c-input__box--width" id="identifier" list="identifier-datalist" maxlength="400" name="identifier" type="text">
        <datalist id="identifier-datalist">
          <option value="batman"></option>
          <option value="robin"></option>
          <option value="joker"></option>
        </datalist>
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { datalistoptions: [Array] }: 2`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" autocomplete="off" class="mg-c-input__box mg-c-input__box--width" id="identifier" list="identifier-datalist" maxlength="400" name="identifier" type="text">
        <datalist id="identifier-datalist">
          <option value="batman"></option>
          <option value="robin"></option>
          <option value="joker"></option>
        </datalist>
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { labelHide: true }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title mg-u-visually-hidden">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { labelOnTop: true }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { readonly: true }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { readonly: true, value: 'blu' }: 1`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <b class="mg-c-input__readonly-value">
        blu
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { required: true, value: 'blu', helpText: 'My help text' }: 1`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-help-text" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text" value="blu">
        <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { tooltip: 'My Tooltip Message' }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
            <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
              <mg-icon>
                <template shadowrootmode="open">
                  <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                    <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                  </svg>
                </template>
              </mg-icon>
            </mg-tooltip>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { tooltip: 'My Tooltip Message', labelOnTop: true }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { tooltip: 'My Tooltip Message', tooltipPosition: 'label' }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { type: 'search' }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="search">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { type: 'search', icon: 'magnifying-glass' }: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-icon mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <mg-icon>
          <template shadowrootmode="open">
            <svg aria-hidden="true" class="mg-c-icon mg-c-icon--magnifying-glass mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
              <path clip-rule="evenodd" d="M2 7a5 5 0 1 1 8.872 3.164l3.127 3.128-.707.707-3.128-3.128A5 5 0 0 1 2 7m5 4a4 4 0 1 1 0-8 4 4 0 0 1 0 8" fill="currentColor" fill-rule="evenodd"></path>
            </svg>
          </template>
        </mg-icon>
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="search">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {}: 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events, case title: Bla 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full mg-u-is-focused">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-help-text" aria-invalid="false" autocomplete="off" class="mg-c-input__box mg-c-input__box--width" id="identifier" list="identifier-datalist" maxlength="400" name="identifier" type="text">
        <datalist id="identifier-datalist">
          <option value="Blu"></option>
          <option value="Bla"></option>
          <option value="Blo"></option>
          <option value="Ble"></option>
        </datalist>
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events, case title: Bli 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full mg-u-is-focused">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-help-text" aria-invalid="false" autocomplete="off" class="mg-c-input__box mg-c-input__box--width" id="identifier" list="identifier-datalist" maxlength="400" name="identifier" type="text">
        <datalist id="identifier-datalist">
          <option value="Blu"></option>
          <option value="Bla"></option>
          <option value="Blo"></option>
          <option value="Ble"></option>
        </datalist>
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events, case title: Blo 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full mg-u-is-focused">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-help-text" aria-invalid="false" autocomplete="off" class="mg-c-input__box mg-c-input__box--width" id="identifier" list="identifier-datalist" maxlength="400" name="identifier" type="text">
        <datalist id="identifier-datalist">
          <option value="Blu"></option>
          <option value="Bla"></option>
          <option value="Blo"></option>
          <option value="Ble"></option>
        </datalist>
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events, case title: Blu 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full mg-u-is-focused">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-help-text" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should update mg-width 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-2">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should update mg-width 2`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-4">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text Should update mg-width 3`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-16">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text display error message with locale: fr 1`] = `
<mg-input-text lang="fr">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-error" slot="error">
        Ce champ est obligatoire.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text display error message with locale: xx 1`] = `
<mg-input-text lang="xx">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text display error with displayError component's public method 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text display error with displayError component's public method 2`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text readonly false Should render with slot. 1`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="search" value="blu">
        <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-button aria-label="search" role="button" slot="append-input" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    <mg-icon>
      <template shadowrootmode="open">
        <svg aria-hidden="true" class="mg-c-icon mg-c-icon--magnifying-glass mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
          <path clip-rule="evenodd" d="M2 7a5 5 0 1 1 8.872 3.164l3.127 3.128-.707.707-3.128-3.128A5 5 0 0 1 2 7m5 4a4 4 0 1 1 0-8 4 4 0 0 1 0 8" fill="currentColor" fill-rule="evenodd"></path>
        </svg>
      </template>
    </mg-icon>
    Search
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text readonly false Should render with slot. 2`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--is-append-input-slot-content mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="search" value="blu">
        <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
  <span slot="append-input">
    test
  </span>
</mg-input-text>
`;

exports[`mg-input-text readonly false Should render with slot. 3`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" type="search" value="blu">
        <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-button aria-label="cancel" is-icon="" role="button" slot="append-input" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--icon mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    <mg-icon>
      <template shadowrootmode="open">
        <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
          <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
          <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
        </svg>
      </template>
    </mg-icon>
  </mg-button>
  <mg-button aria-label="validate" is-icon="" role="button" slot="append-input" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--icon mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    <mg-icon>
      <template shadowrootmode="open">
        <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
          <path d="M6.77 12.113 15 3.883l-.707-.707-8.23 8.23-4.355-4.355L1 7.76l4.355 4.355-.004.004.707.706.004-.004.003.004.708-.707z" fill="currentColor"></path>
        </svg>
      </template>
    </mg-icon>
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text readonly true Should render with slot. 1`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--is-input-group-append mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <b class="mg-c-input__readonly-value">
        blu
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-button aria-label="search" role="button" slot="append-input" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    <mg-icon>
      <template shadowrootmode="open">
        <svg aria-hidden="true" class="mg-c-icon mg-c-icon--magnifying-glass mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
          <path clip-rule="evenodd" d="M2 7a5 5 0 1 1 8.872 3.164l3.127 3.128-.707.707-3.128-3.128A5 5 0 0 1 2 7m5 4a4 4 0 1 1 0-8 4 4 0 0 1 0 8" fill="currentColor" fill-rule="evenodd"></path>
        </svg>
      </template>
    </mg-icon>
    Search
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text readonly true Should render with slot. 2`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--is-append-input-slot-content mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__readonly-value">
        <b>
          blu
        </b>
        test
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
  <span slot="append-input">
    test
  </span>
</mg-input-text>
`;

exports[`mg-input-text readonly true Should render with slot. 3`] = `
<mg-input-text value="blu">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <b class="mg-c-input__readonly-value">
        blu
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-button aria-label="cancel" is-icon="" role="button" slot="append-input" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--icon mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    <mg-icon>
      <template shadowrootmode="open">
        <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
          <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
          <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
        </svg>
      </template>
    </mg-icon>
  </mg-button>
  <mg-button aria-label="validate" is-icon="" role="button" slot="append-input" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--icon mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    <mg-icon>
      <template shadowrootmode="open">
        <svg aria-hidden="true" class="mg-c-icon mg-c-icon--check mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
          <path d="M6.77 12.113 15 3.883l-.707-.707-8.23 8.23-4.355-4.355L1 7.76l4.355 4.355-.004.004.707.706.004-.004.003.004.708-.707z" fill="currentColor"></path>
        </svg>
      </template>
    </mg-icon>
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text should display override error with setError component's public method 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text should display override error with setError component's public method 2`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text should display override error with setError component's public method 3`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text should display override error with setError component's public method 4`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" required="" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-error" slot="error">
        Override error
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is disabled validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" pattern="[a-z]*" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is disabled validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 2`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" disabled="" id="identifier" maxlength="400" name="identifier" pattern="[a-z]*" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is readonly validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 1`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__with-character-left" style="--mg-c-character-left-message-length: 7;">
        <input aria-describedby="identifier-character-left identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" maxlength="400" name="identifier" pattern="[a-z]*" type="text">
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
      </div>
      <slot name="append-input"></slot>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is readonly validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 2`] = `
<mg-input-text>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-text>
`;
